# pcroast

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  debug.gdb
.github/workflows/: qa.yaml
config/: FreeRTOSConfig.h  pinout.h
include/: beeper.h  logging.h  max6675.h  pid.h  uid.h
pico/: CMakeLists.txt  FreeRTOSConfig.h  board_ST7735.h  control.c  gfxconf.h  graphics.c  graphics.h  kernel.h  lwipopts.h  os_tasks.h  pcroast.c  pinout.h  st7735.c  temperature.c  temperature.h  wifi.c  wifi.h
src/: CMakeLists.txt  beeper.c  max6675.c  pid.c  uid.c
tests/: CMakeLists.txt  test_beeper.cpp  test_max6675.cpp  test_uid.cpp
